--- a/Beancounter.csproj
+++ b/Beancounter.csproj
@@ -4,6 +4,13 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <!-- NuGet package metadata -->
+        <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+        <PackageId>dev.elias.beancounter</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>Elias</Authors>
+        <Company>Solo</Company>
+        <Description>Misc reusable functions</Description>
     </PropertyGroup>
 
     <ItemGroup>
