--- a/Beancounter.csproj
+++ b/Beancounter.csproj
@@ -7,15 +7,19 @@
         <!-- NuGet package metadata -->
         <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
         <PackageId>dev.elias.beancounter</PackageId>
-        <Version>1.0.2</Version>
+        <Version>1.0.3</Version>
         <Authors>Elias</Authors>
         <Company>Solo</Company>
         <Description>Misc reusable functions</Description>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
     </PropertyGroup>
 
     <ItemGroup>
       <PackageReference Include="DotNetEnv" Version="3.1.1" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     </ItemGroup>
+    <ItemGroup>
+      <None Include="README.md" Pack="true" PackagePath="\"/>
+  </ItemGroup>
 
 </Project>
