Adds comprehensive tests for async barrier
Establishes robust unit tests for the asynchronous barrier.

Verifies correct behavior for:
- Argument validation during construction and signaling
- Participant synchronization and blocking
- Parallel slot limiting and retention across phases
- Cancellation scenarios and proper disposal
- Edge cases like excess participants or zero parallelism

These tests ensure the barrier operates reliably, providing confidence in its use for concurrent task management.

--- a/Beancounter.Test/Beancounter.Test.csproj
+++ b/Beancounter.Test/Beancounter.Test.csproj
@@ -17,6 +17,10 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="../Beancounter/Beancounter.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
         <Using Include="NUnit.Framework"/>
     </ItemGroup>
 
